2009-11-20  Amador Loureiro Blanco  <dorfun@adorfunteca.org>

	* po/gl.po: Updated Galician translation.

2009-11-18  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (vgl_main_window_init):
	Add a border to the contents of the main window excluding the menu
	bar.

2009-11-18  Alberto Garcia  <agarcia@igalia.com>

	* src/audio.c (get_audio_thread, gst_eos_handler, bus_call):
	Change method use to compute the number of failed tracks.

2009-11-18  Alberto Garcia  <agarcia@igalia.com>

	* src/http.c (+create_curl_handle, http_get_to_fd)
	(http_download_file, http_get_buffer, http_post_buffer):
	Set a connection timeout to all HTTP calls.
	Prevent CURL from emitting signals.

2009-11-18  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (vgl_main_window_finalize)
	* src/vgl-bookmark-window.c (vgl_bookmark_window_finalize)
	* src/vgl-bookmark-mgr.c (vgl_bookmark_mgr_finalize):
	Remove unneeded calls to g_signal_handlers_destroy()

2009-11-17  Janne Mäkinen  <janne.makinen@surffi.fi>

	* po/fi.po: Updated Finnish translation.

2009-11-16  Alberto Garcia  <agarcia@igalia.com>

	* debian/changelog
	* debian/control.*:
	Updated package description

2009-11-15  Alberto Garcia  <agarcia@igalia.com>

	* data/cover/*/cover.png
	* data/cover/cover.svg
	New CD case image to place the album cover artwork.
	Image designed by Otto Krüja.

	* src/vgl-main-window.c (vgl_main_window_init)
	(vgl_main_window_set_state, vgl_main_window_set_album_cover):
	Replace the old cover frame with the CD case.

2009-11-15  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c:
	Remove old copyright line

2009-11-15  Otto Krüja  <ottokrueja@gmx.net>

	* AUTHORS
	* data/icons/*/vagalume.png
	* data/icons/vagalume.xpm
	* data/icons/vagalume.svg
	* debian/control.maemo[2345]
	* src/uimisc.c:
	New Vagalume icon

2009-11-03  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c (vgl_main_window_init):